Update header background color in CSS and adjust logo width in Header component for improved styling consistency.

--- a/src/index.css
+++ b/src/index.css
@@ -2563,7 +2563,7 @@ html {
 }
 
 .header-color{
-  background-color: #0a1e2c8e;
+  background-color: #0a1e2c !important;
 }
 
 /* rotation animation */
